# officegen-CLI

./: .gitattributes  .gitignore  .npmignore  AGENTS.md  Cargo.toml  LICENSE  README.md  officegen_cli_spec_v1_2_hardened_ja.md  package-lock.json  package.json  tsconfig.base.json  vitest.config.ts
.cursor-fleet/: README.md  config.toml
goal/: acceptance-suite.perfect-spec-v2.json  v3.1.0-evidence-matrix.json
install/: install.ps1  install.sh
schemas/: capabilities-1.2.schema.json  edit-ops-1.2.schema.json  envelope-1.2.schema.json  error-catalog-1.2.schema.json  ir-document-1.2.schema.json  ir-document-2.0.schema.json  manifest-1.2.schema.json  workflow-1.2.schema.json  workflow-2.0.schema.json
scripts/: benchmark-fetch.mjs  benchmark-local-fixtures.mjs  benchmark-policy.mjs  benchmark-review.mjs  binary-smoke.mjs  block-npm-publish.mjs  capture-cli-parity.mjs  check-contract.mjs  check-goal.mjs  check-native-release-assets.mjs  check-perfect-spec.mjs  check-remediation-matrix.mjs  check-schema-coverage.mjs  clean.mjs  generate-perfect-spec-evidence.mjs  github-install-smoke.mjs  installer-smoke.mjs  native-release-smoke.mjs  pack-smoke.mjs  package-native-asset.mjs  patch-dist-imports.mjs  perfect-spec-post-tag-smoke.mjs  prepare-check.mjs  release-tarball-smoke.mjs  run-cargo.mjs  sha256-file.mjs  v5-acceptance.mjs  version-bump.mjs
src/: main.rs  registry.rs  runtime.rs  safety.rs  schemas.rs  v5_ooxml.rs  v5_workflow.rs  v5_xlsx_template.rs
tests/: cli_contract_v51.rs  command_registry.rs  pptx_docx_v5.rs  schema_contract.rs  security_paths_zip.rs  (+2 more)
(+61 files in other folders)
